working on category component

--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
         <div class="header__left">
             <h1>Read, study, and learn The Noble Quran.</h1>
             <p>Build knowledge of your Deen to advance your status in the eyes of your Maker.
-                “Verily the one who recites the Quran beautifully, smoothly, and precisely, 
-                he will be in the company of the noble and obedient angels. 
-                And as for the one who recites with difficulty, stammering or stumbling through its verses, then he will have TWICE that reward.” (Sahih Al-Bukhari)
             </p>
             <a href="courses.html" class="btn btn-primary">Get Started</a>
         </div>
@@ -57,6 +54,54 @@
 </header>
 <!-- =================END OF HEADER====================== -->
 
+
+<section class="categories">
+    <div class="container categories__container">
+        <div class="categories__left">
+            <h1>Categories</h1>
+            <p>
+                “Verily the one who recites the Quran beautifully, smoothly, and precisely, 
+                he will be in the company of the noble and obedient angels. 
+                And as for the one who recites with difficulty, stammering or stumbling through its verses, then he will have TWICE that reward.” (Sahih Al-Bukhari)
+            </p>
+            <a href="#" class="btn">Learn More</a>
+        </div>
+        <div class="categories__right">
+            <article class="category">
+                <span class="category__icon"><i class="uil uil-book-open"></i></span>
+                    <h5>Qur'an</h5>
+                    <p>Knowledge is power. Knowledge is power.</p>
+            </article>
+
+            <article class="category">
+                <span class="category__icon"><i class="uil uil-book-open"></i></span>
+                    <h5>Hadith</h5>
+                    <p>Knowledge is power. Knowledge is power.</p>
+            </article>
+
+            <article class="category">
+                <span class="category__icon"><i class="uil uil-book-open"></i></span>
+                    <h5>Fiqh</h5>
+                    <p>Knowledge is power. Knowledge is power.</p>
+            </article>
+
+            <article class="category">
+                <span class="category__icon"><i class="uil uil-book-open"></i></span>
+                    <h5>Tafseer</h5>
+                    <p>Knowledge is power. Knowledge is power.</p>
+            </article>
+
+            <article class="category">
+                <span class="category__icon"><i class="uil uil-book-open"></i></span>
+                    <h5>Seerah</h5>
+                    <p>Knowledge is power. Knowledge is power.</p>
+            </article>
+        </div>
+    </div>
+</section>
+<!-- ================================END OF CATEGORIES====================================== -->
+
+<script src="./main.js"></script>
 
 </body>
 </html>
