working on course component

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 <!-- =================END OF HEADER====================== -->
 
 
+
+
 <section class="categories">
     <div class="container categories__container">
         <div class="categories__left">
@@ -100,6 +102,50 @@
     </div>
 </section>
 <!-- ================================END OF CATEGORIES====================================== -->
+
+
+
+
+<section class="courses">
+    <h2>Our Popular Courses</h2>
+    <div class="containaner courses__container">
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/course1.png">
+            </div>
+            <div class="course__info">
+                <h4>Quran Recitation Tajweed Course</h4>
+            <p>Breath control is crucial to most of the contemplative traditions... Qur'anic reciters chant long phrases for meditation.</p>
+            <a href="courses.html" class="btn btn-primary">Learn More</a>
+            </div>
+        </article>
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/course2.jpg">
+            </div>
+           <div class="course__info">
+            <h4>'Ulum Al-Hadith</h4>
+            <p>Acquire knowledge and learn tranquility and dignity.</p>
+            <a href="courses.html" class="btn btn-primary">Learn More</a>
+           </div>
+        </article>
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/course3.jpg">
+            </div>
+            <div class="course__info">
+                <h4>Tafseer</h4>
+            <p>Tafseer is essential for proper understanding of Quran. Without knowledge of Tafseer, we can't understand the meaning of Quran. Tafseer is meant to explain to mankind the Book that has been revealed to them by Allah.</p>
+            <a href="courses.html" class="btn btn-primary">Learn More</a>
+            </div>
+        </article>
+    </div>
+</section>
+<!-- =======================END OF COURSES======================== -->
+
+
+
+
 
 <script src="./main.js"></script>
 
