--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="header__right">
             <div class="header__right-image">
-                <img src="./images/headerr.svg">
+                <img src="./images/headerrr.svg">
             </div>
         </div>
     </div>
@@ -111,7 +111,7 @@
     <div class="containaner courses__container">
         <article class="course">
             <div class="course__image">
-                <img src="./images/course1.png">
+                <img src="./images/course1.png" width="370" height="250" />
             </div>
             <div class="course__info">
                 <h4>Quran Recitation Tajweed Course</h4>
@@ -121,7 +121,7 @@
         </article>
         <article class="course">
             <div class="course__image">
-                <img src="./images/course2.jpg">
+                <img src="./images/course2.jpg" width="370" height="250" />
             </div>
            <div class="course__info">
             <h4>'Ulum Al-Hadith</h4>
@@ -131,7 +131,7 @@
         </article>
         <article class="course">
             <div class="course__image">
-                <img src="./images/course3.jpg">
+                <img src="./images/course33.jpg" width="370" height="250" />
             </div>
             <div class="course__info">
                 <h4>Tafseer</h4>
