--- a/index.html
+++ b/index.html
@@ -336,7 +336,52 @@
             </div>
         </article>
     </div>
+    <div class="swiper-pagination"></div>
 </section>
+
+
+
+<footer class="footer">
+    <div class="container footer__container">
+        <div class="footer__1">
+            <a href="index.html" class="footer__logo"><h4>ISLAMIYYA</h4></a>
+            <p>An Investment in Knowledge Pays the best interest.</p>
+        </div>
+        
+        <div class="footer__2">
+            <h4>Permalinks</h4>
+            <ul class="permalinks">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="courses.html">Courses</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+
+        <div class="footer__3">
+            <h4>Privacy</h4>
+            <ul class="privacy">
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms and condition</a></li>
+                <li><a href="#">Refund Policy</a></li>
+            </ul>
+        </div>
+
+        <div class="footer__4">
+            <h4>Contact Us</h4>
+            <div>
+                <p>+234 703 134 3181</p>
+                <p>moustymainer@gmail.com</p>
+            </div>
+
+        <ul class="footer__socials"></ul>
+            <li>
+                <a href="#"><i class="uil uil-facebook-f"></i></a>
+            </li>
+        </div>
+
+    </div>
+</footer>
 
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
@@ -344,12 +389,18 @@
 
 <script>
     var swiper = new Swiper(".mySwiper", {
-      slidesPerView: "3",
+      slidesPerView: "1",
       spaceBetween: 30,
       pagination: {
         el: ".swiper-pagination",
         clickable: true,
       },
+      // when window width is >= 600px
+      breakpoints: {
+        600: {
+            slidesPerView: 2
+        }
+      }
     });
 </script>
 
