working on nav bar media query

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 <li><a href="courses.html">Courses</a></li>
             </ul>
              <button id="open-menu-btn"><i class="uil uil-list-ui-alt"></i></button>
-             <button id="open-menu-btn"><i class="uil uil-multiply"></i></button>
-
+             <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
         </div>
     </nav>
 <!-- ==========================END OF NAV BAR========================= -->
+
 
 
 
@@ -60,6 +60,7 @@
     </div>
 </header>
 <!-- =================END OF HEADER====================== -->
+
 
 
 
@@ -113,6 +114,7 @@
 
 
 
+
 <section class="courses">
     <h2>Our Popular Courses</h2>
     <div class="containaner courses__container">
@@ -151,9 +153,12 @@
 <!-- =======================END OF COURSES======================== -->
 
 
+
+
+
 <section class="faqs ">
+    <H2>Frequently Asked Questions</H2>
     <div class="container faqs__container">
-        <H2>Frequently Asked Questions</H2>
         <article class="faq">
             <div class="faq__icon"><i class="uil uil-plus"></i></div>
             <div class="question__answer">
@@ -268,6 +273,9 @@
 <!-- ==================END OF FAQS================================= -->
 
 
+
+
+
 <section class="container testimonials__container mySwiper">
     <h2>Student's Testimonials</h2>
     <div class="swiper-wrapper">
@@ -338,6 +346,9 @@
     </div>
     <div class="swiper-pagination"></div>
 </section>
+<!-- ====================END OF TESTIMONIALS================================ -->
+
+
 
 
 
@@ -376,10 +387,20 @@
 
         <ul class="footer__socials"></ul>
             <li>
-                <a href="#"><i class="uil uil-facebook-f"></i></a>
+                <a href="#"><i class="uil uil-facebook"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="uil uil-twitter"></i></a>
+
+            </li>
+            <li>
+                <a href="#"><i class="uil uil-instagram"></i></a>
             </li>
         </div>
 
+    </div>
+    <div class="footer__copyright">
+        <small>Copyright &copy; Islamiyya by <a href="https://portfolio-inky-psi-48.vercel.app/">Abokin Tech </a>2023</small>
     </div>
 </footer>
 
