working on media queries!

--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
             <div class="course__image">
                 <img src="./images/course2.jpg" width="370" height="250" />
             </div>
-           <div class="course__info">
+        <div class="course__info">
             <h4>'Ulum Al-Hadith</h4>
             <p>Acquire knowledge and learn tranquility and dignity.</p>
             <a href="courses.html" class="btn btn-primary">Learn More</a>
-           </div>
+        </div>
         </article>
         <article class="course">
             <div class="course__image">
@@ -336,7 +336,7 @@
                 <img src="./images/avatar5.jpg">
             </div>
             <div class="testimonial__info">
-                <h5>Mustapha Abubakar Mainasara</h5>
+                <h5>Safiyya Umar</h5>
                 <small>Student</small>
                 <div class="testimonial__body">
                     <p>Learning is a recursive function, water your mind to grow your soul.</p>
@@ -400,7 +400,7 @@
 
     </div>
     <div class="footer__copyright">
-        <small>Copyright &copy; Islamiyya by <a href="https://portfolio-inky-psi-48.vercel.app/">Abokin Tech </a>2023</small>
+        <small>Copyright &copy; Islamiyya by <a href="https://portfolio-inky-psi-48.vercel.app/">Abokin Tech Inc. <br></a>2023</small>
     </div>
 </footer>
 
