--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <article class="category">
                 <span class="category__icon"><i class="uil uil-book-open"></i></span>
                     <h5>Qur'an</h5>
-                    <p>Knowledge is power. Knowledge is power.</p>
+                    <p>Seek knowledge. Knowledge is power.</p>
             </article>
 
             <article class="category">
